fix spacing of header for load more in section

--- a/packages/global/scss/core.scss
+++ b/packages/global/scss/core.scss
@@ -186,6 +186,7 @@ label {
 .section-cards {
   &__header {
     @include skin-typography($style: "header-2");
+    margin-bottom: 16px;
   }
 }
 
